--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -20,21 +22,29 @@
     <!-- Navbar -->
     <nav
       id="navbar"
-      class="navbar navbar-expand-lg navbar-light bg-primary fixed-top shadow-sm">
+      class="navbar navbar-expand-lg navbar-light bg-primary fixed-top shadow-sm"
+    >
       <div class="container">
-        <a class="navbar-brand" href="#" 
-        style="font-weight: bold; color: beige; font-size: 25px;">Kesh Nepal</a>
+        <a
+          class="navbar-brand"
+          href="#"
+          style="font-weight: bold; color: beige; font-size: 25px"
+          >Kesh Nepal</a
+        >
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navMenu">
+          data-bs-target="#navMenu"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navMenu">
-          <ul class="navbar-nav ms-auto" 
-          style="font-size: 15px; color: beige; font-weight: 400;">
+          <ul
+            class="navbar-nav ms-auto"
+            style="font-size: 18px; font-weight: 400"
+          >
             <li class="nav-item">
               <a class="nav-link" href="#hero">Home</a>
             </li>
@@ -47,9 +57,9 @@
               <a class="nav-link" href="#why-donate">Why Donate</a>
             </li>
 
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#gallery">Gallery</a>
-            </li>
+            </li> -->
 
             <li class="nav-item">
               <a class="nav-link" href="#contact">Get Involved</a>
@@ -67,7 +77,9 @@
         background-image: url('./images/hair.jpg');
         background-size: cover;
         height: 100vh;
-        color: white;">
+        color: white;
+      "
+    >
       <div class="container">
         <h1>Donate Hair, Spread Hope</h1>
         <p>Join us in making a difference.</p>
@@ -82,9 +94,13 @@
           <div class="col-md-6">
             <h2 style="text-align: center">About Kesh Nepal</h2>
             <p>
-              Kesh Nepal is a nonprofit organization working to organize hair
-              donation campaigns across Nepal. Our mission is to spread love,
-              confidence, and hope through selfless giving.
+              At Kesh Nepal, we believe a small act of kindness can make a world
+              of difference. We bring people together through hair donation
+              campaigns across Nepal—connecting those willing to give with those
+              who’ve lost their hair to cancer or other medical conditions. For
+              someone going through a tough time, a donated wig can mean so much
+              more than just hair—it can bring back confidence, hope, and a
+              smile.
             </p>
           </div>
 
@@ -92,7 +108,8 @@
             <img
               src="./images/bgimage.jpg"
               class="img-fluid rounded"
-              alt="About Kesh Nepal"/>
+              alt="About Kesh Nepal"
+            />
           </div>
         </div>
       </div>
@@ -146,7 +163,7 @@
     </section>
 
     <!-- Gallery Section -->
-    <section id="gallery" class="py-5">
+    <!-- <section id="gallery" class="py-5">
       <div class="container">
         <h2 class="text-center mb-4">Gallery</h2>
         <div class="row g-3">
@@ -154,25 +171,28 @@
             <img
               src="./images/hair2.png"
               class="img-fluid rounded"
-              alt="Gallery Image 1"/>
+              alt="Gallery Image 1"
+            />
           </div>
 
           <div class="col-md-4">
             <img
               src="./images/hair2.png"
               class="img-fluid rounded"
-              alt="Gallery Image 2"/>
+              alt="Gallery Image 2"
+            />
           </div>
 
           <div class="col-md-4">
             <img
               src="./images/hair2.png"
               class="img-fluid rounded"
-              alt="Gallery Image 3"/>
+              alt="Gallery Image 3"
+            />
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
     <section id="contact" class="py-5 bg-light">
@@ -182,7 +202,8 @@
           action="https://formsubmit.co/your-email@example.com"
           method="POST"
           class="row g-3 needs-validation"
-          novalidate>
+          novalidate
+        >
           <div class="col-md-6">
             <label for="name" class="form-label">Name</label>
             <input
@@ -190,7 +211,8 @@
               class="form-control"
               id="name"
               name="name"
-              required/>
+              required
+            />
             <div class="invalid-feedback">Please enter your name.</div>
           </div>
 
@@ -201,7 +223,8 @@
               class="form-control"
               id="email"
               name="email"
-              required/>
+              required
+            />
             <div class="invalid-feedback">Please enter a valid email.</div>
           </div>
 
@@ -217,7 +240,8 @@
               id="message"
               name="message"
               rows="4"
-              required></textarea>
+              required
+            ></textarea>
             <div class="invalid-feedback">Please enter a message.</div>
           </div>
 
@@ -231,12 +255,8 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4">
       <div class="container">
-        <p>Contact: info@keshnepal.org | +977 123456789</p>
-        <div class="mb-2">
-          <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="text-white"><i class="bi bi-twitter"></i></a>
-        </div>
+        <p>Contact: abc@gmail.com | +977 9860772317</p>
+        <p>Address: Ratnachowk, Pokhara-7, Nepal</p>
         <p class="mb-0">&copy; 2025 Kesh Nepal</p>
       </div>
     </footer>
