--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -22,29 +20,25 @@
     <!-- Navbar -->
     <nav
       id="navbar"
-      class="navbar navbar-expand-lg navbar-light bg-primary fixed-top shadow-sm"
-    >
+      class="navbar navbar-expand-lg navbar-light bg-primary fixed-top shadow-sm">
       <div class="container">
         <a
           class="navbar-brand"
           href="#"
-          style="font-weight: bold; color: beige; font-size: 25px"
-          >Kesh Nepal</a
-        >
+          style="font-weight: bold; color: beige; font-size: 25px">
+          Kesh Nepal</a>
         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navMenu"
-        >
+          data-bs-target="#navMenu">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navMenu">
           <ul
             class="navbar-nav ms-auto"
-            style="font-size: 18px; font-weight: 400"
-          >
+            style="font-size: 18px; color: beige; font-weight: 400">
             <li class="nav-item">
               <a class="nav-link" href="#hero">Home</a>
             </li>
@@ -57,9 +51,9 @@
               <a class="nav-link" href="#why-donate">Why Donate</a>
             </li>
 
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="#gallery">Gallery</a>
-            </li> -->
+            </li>
 
             <li class="nav-item">
               <a class="nav-link" href="#contact">Get Involved</a>
@@ -77,9 +71,7 @@
         background-image: url('./images/hair.jpg');
         background-size: cover;
         height: 100vh;
-        color: white;
-      "
-    >
+        color: white;">
       <div class="container">
         <h1>Donate Hair, Spread Hope</h1>
         <p>Join us in making a difference.</p>
@@ -108,8 +100,7 @@
             <img
               src="./images/bgimage.jpg"
               class="img-fluid rounded"
-              alt="About Kesh Nepal"
-            />
+              alt="About Kesh Nepal"/>
           </div>
         </div>
       </div>
@@ -163,7 +154,7 @@
     </section>
 
     <!-- Gallery Section -->
-    <!-- <section id="gallery" class="py-5">
+    <section id="gallery" class="py-5">
       <div class="container">
         <h2 class="text-center mb-4">Gallery</h2>
         <div class="row g-3">
@@ -171,28 +162,25 @@
             <img
               src="./images/hair2.png"
               class="img-fluid rounded"
-              alt="Gallery Image 1"
-            />
+              alt="Gallery Image 1"/>
           </div>
 
           <div class="col-md-4">
             <img
               src="./images/hair2.png"
               class="img-fluid rounded"
-              alt="Gallery Image 2"
-            />
+              alt="Gallery Image 2"/>
           </div>
 
           <div class="col-md-4">
             <img
               src="./images/hair2.png"
               class="img-fluid rounded"
-              alt="Gallery Image 3"
-            />
+              alt="Gallery Image 3"/>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="py-5 bg-light">
@@ -202,8 +190,7 @@
           action="https://formsubmit.co/your-email@example.com"
           method="POST"
           class="row g-3 needs-validation"
-          novalidate
-        >
+          novalidate>
           <div class="col-md-6">
             <label for="name" class="form-label">Name</label>
             <input
@@ -211,8 +198,7 @@
               class="form-control"
               id="name"
               name="name"
-              required
-            />
+              required/>
             <div class="invalid-feedback">Please enter your name.</div>
           </div>
 
@@ -223,8 +209,7 @@
               class="form-control"
               id="email"
               name="email"
-              required
-            />
+              required/>
             <div class="invalid-feedback">Please enter a valid email.</div>
           </div>
 
@@ -240,8 +225,8 @@
               id="message"
               name="message"
               rows="4"
-              required
-            ></textarea>
+              required>
+            </textarea>
             <div class="invalid-feedback">Please enter a message.</div>
           </div>
 
